# BehaviorElicitationTool

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.ipynb
prompts/: add_generated_text.json  apply_action.json  apply_behavior.json  extract_scenarios.json  extract_sensitive_words.json  pre_prompt.json  pseudonym_substitution.json  rewrite_with_llm.json  rewrite_with_typos.json  synonym_substitution.json
src/bet/: main.py
src/bet/Factories/: AddFactories.py  AdditionalGenerationInstructionsFactories.py  Factory.py  FactoryLib.py  GlobalTransformFactories.py  IndividualTransformFactories.py  Transforms.py  WrapFactories.py  __init__.py
src/bet/GeneticAlgorithm/: GAParameters.py  GAutils.py  GeneticAlgorithm.py  Individual.py  __init__.py
src/bet/Metric/: Heatmap.py  ProtoMetric.py  Tokenizer.py  __init__.py
src/bet/Primitives/: Family.py  Primitive.py  PrimitiveLib.py  __init__.py
src/bet/PromptBlock/: Ensemble.py  Unit.py  __init__.py
src/bet/utils/: __init__.py  bet.py  encoders.py  logger.py  mongodb.py  parameters.py  pre_computed_lang_test.py
